fixed git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -29,21 +29,21 @@ XaeroWaypoints_BACKUP240807/
 EffekseerNativeForJava.dll
 emi.json
 fabricloader.log/
-hs_err_pid2400/
-hs_err_pid15552/
-hs_err_pid22164/
-hs_err_pid23532
-hs_err_pid25396
-hs_err_pid52544
+hs_err_pid2400.log
+hs_err_pid15552.log
+hs_err_pid22164.log
+hs_err_pid23532.log
+hs_err_pid25396.log
+hs_err_pid52544.log
 knownkeys.txt
 minecraftinstance.json
 ops.json
 options.txt
 patchouli_data.json
 README.md
-replay_pid22072
-replay_pid25396
-replay_pid52544
+replay_pid22072.log
+replay_pid25396.log
+replay_pid52544.log
 rhino.local.properties
 servers.dat
 servers.dat_old
