fixed git ignore again

--- a/.gitignore
+++ b/.gitignore
@@ -28,7 +28,7 @@ XaeroWaypoints_BACKUP240807/
 .qmenu_opened.marker
 EffekseerNativeForJava.dll
 emi.json
-fabricloader.log/
+fabricloader.log
 hs_err_pid2400.log
 hs_err_pid15552.log
 hs_err_pid22164.log
