added eyes enemy and chimes

--- a/config/sound_physics_remastered/allowed_sounds.properties
+++ b/config/sound_physics_remastered/allowed_sounds.properties
@@ -1581,6 +1581,19 @@ caverns_and_chasms\:item.tether_potion.break=true
 caverns_and_chasms\:item.tether_potion.equip=true
 caverns_and_chasms\:item.tuning_fork.vibrate=true
 caverns_and_chasms\:music.record.epilogue=true
+chimes\:ambient.outdoor.wind=true
+chimes\:block.amethyst.shimmer=true
+chimes\:block.amethyst.shimmering=true
+chimes\:block.bamboo.chime=true
+chimes\:block.bamboo.chiming=true
+chimes\:block.bamboo.tie=true
+chimes\:block.copper.chime=true
+chimes\:block.copper.chiming=true
+chimes\:block.copper.tie=true
+chimes\:block.glass.chime=true
+chimes\:block.iron.chime=true
+chimes\:block.iron.chiming=true
+chimes\:block.iron.tie=true
 cloudstorage\:balloon_hurt=true
 cloudstorage\:balloon_pop=true
 cloudstorage\:bloviator_blow=true
@@ -1931,6 +1944,9 @@ exposure\:item.photograph_frame.break=true
 exposure\:item.photograph_frame.place=true
 exposure\:item.photograph_frame.remove_item=true
 exposure\:item.photograph_frame.rotate_item=true
+eyesinthedarkness\:mob.eyes.disappear=true
+eyesinthedarkness\:mob.eyes.jumpscare=true
+eyesinthedarkness\:mob.eyes.laugh=true
 fallingtrees\:tree_fall=true
 fallingtrees\:tree_impact=true
 farlanders\:entity.ender_golem.death=true
