--- a/config/sound_physics_remastered/allowed_sounds.properties
+++ b/config/sound_physics_remastered/allowed_sounds.properties
@@ -1542,6 +1542,44 @@ cave_dweller\:dweller_hurt_4=true
 cave_dweller\:flee_1=true
 cave_dweller\:flee_2=true
 cave_dweller\:spotted=true
+cave_stuff\:boiling_water=true
+cave_stuff\:gas_leak=true
+cave_stuff\:gas_mask_breathing=true
+cave_stuff\:goldenranas_tongue=true
+cave_stuff\:goldenranasheal=true
+cave_stuff\:goldenranasjump=true
+cave_stuff\:goldenranaslaser=true
+cave_stuff\:goldenranassummon=true
+cave_stuff\:goldenranastongue13=true
+cave_stuff\:guano_guardian_launcher=true
+cave_stuff\:icecrawlerhurts=true
+cave_stuff\:icecrawlerroars=true
+cave_stuff\:injector=true
+cave_stuff\:jameos_blind_crab-hurt=true
+cave_stuff\:jameos_blind_crab_ambient=true
+cave_stuff\:jameos_blind_crab_dies=true
+cave_stuff\:kanpotamon_hit=true
+cave_stuff\:kanpotamon_sword_pulls=true
+cave_stuff\:kettlocherusbeetle_ambient=true
+cave_stuff\:lepidurus_dies=true
+cave_stuff\:lepidurus_hurts=true
+cave_stuff\:party_spider_music_disc=true
+cave_stuff\:sculkerite_greatsword_dash=true
+cave_stuff\:sculkerite_greatsword_dash_hit=true
+cave_stuff\:sculkerite_greatsword_explosion=true
+cave_stuff\:sculkerite_greatsword_hit=true
+cave_stuff\:speleologistworks=true
+cave_stuff\:spores_music_disc=true
+cave_stuff\:start_fire=true
+cave_stuff\:tolypocladiumgolemcharges=true
+cave_stuff\:tolypocladiumgolemchargesthe=true
+cave_stuff\:tolypocladiumgolemhurts=true
+cave_stuff\:tolypocladiumweaklinghurts=true
+cave_stuff\:troglocaris_die=true
+cave_stuff\:troglocaris_hurt=true
+cave_stuff\:white_cave_velvet_worm_dies=true
+cave_stuff\:white_cave_velvet_worm_hurt=true
+cave_stuff\:white_cave_velvet_worm_idle=true
 caverns_and_chasms\:block.note_block.imitate.deeper=true
 caverns_and_chasms\:block.note_block.imitate.mime=true
 caverns_and_chasms\:block.note_block.imitate.peeper=true
@@ -3448,6 +3486,20 @@ legendarycreatures\:scorpion_step=true
 legendarycreatures\:scorpion_tail_hit=true
 legendarycreatures\:wisp_death=true
 legendarycreatures\:wisp_idle=true
+legendarysurvivaloverhaul\:cooler_block=true
+legendarysurvivaloverhaul\:frostbite=true
+legendarysurvivaloverhaul\:frostbite_early=true
+legendarysurvivaloverhaul\:hard_falling_hurt=true
+legendarysurvivaloverhaul\:headache_heartbeat=true
+legendarysurvivaloverhaul\:headshot=true
+legendarysurvivaloverhaul\:heal_body_part=true
+legendarysurvivaloverhaul\:heart_container=true
+legendarysurvivaloverhaul\:heat_stroke=true
+legendarysurvivaloverhaul\:heat_stroke_early=true
+legendarysurvivaloverhaul\:panting=true
+legendarysurvivaloverhaul\:self_watering=true
+legendarysurvivaloverhaul\:sewing_table=true
+legendarysurvivaloverhaul\:shivering=true
 littlejoys\:drop_rush=true
 littlejoys\:drop_rush_start=true
 littlejoys\:drop_rush_stop=true
