--- a/config/jei/recipe-category-sort-order.ini
+++ b/config/jei/recipe-category-sort-order.ini
@@ -53,3 +53,4 @@ ars_nouveau:enchantment_apparatus
 ars_nouveau:glyph_recipe
 ars_nouveau:imbuement
 ars_nouveau:scry_ritual
+legendarysurvivaloverhaul:sewing
