recording-ready, made Kathy less aggressive

--- a/config/jei/ingredient-list-mod-sort-order.ini
+++ b/config/jei/ingredient-list-mod-sort-order.ini
@@ -37,7 +37,6 @@ Rats
 LegendaryMonsters
 Illager Invasion
 Jellyfishing
-Spelunker's Charm
 Mystical Oak Tree
 Aquamirae
 Obscure API
@@ -138,3 +137,4 @@ Chimes
 Eyes in the Darkness
 Cave Stuff
 Legendary Survival Overhaul
+Lava Monster
