--- a/config/sound_physics_remastered/allowed_sounds.properties
+++ b/config/sound_physics_remastered/allowed_sounds.properties
@@ -6786,6 +6786,7 @@ the_bumblezone\:music_disc.knowing_renren=true
 the_bumblezone\:music_disc.la_bee_da_loca=true
 the_bumblezone\:music_disc.life_renren=true
 the_bumblezone\:music_disc.radiance_renren=true
+the_bumblezone\:music_disc.rivers_of_honey_moserao=true
 the_deep_void\:abductor_ambient=true
 the_deep_void\:amalgam_ambient=true
 the_deep_void\:amalgam_step=true
