--- a/config/packetfixer.properties
+++ b/config/packetfixer.properties
@@ -1,15 +1,16 @@
 #Packet Fixer config file.
 #Default values (minecraft default): nbtMaxSize 2097152, packetSize 1048576, decoderSize 8388608 and varInt21Size 3.
 #Max values are 2147483647 for packetSize/decoderSize/varInt21 and 9223372036854775807 for nbtMaxSize.
-#Fri Jun 20 17:20:44 PDT 2025
-chunkPacketData=2097152
-varLong=10
-nbtMaxSize=209715200
+#Tue Jun 24 21:09:11 PDT 2025
 utfSize=3276700
 allSizesUnlimited=true
-decoderSize=838860800
+forceUnlimitedNbtEnabled=false
 packetSize=104857600
 stringSize=32767
 timeout=90
 varInt21=8
 varInt=5
+chunkPacketData=2097152
+varLong=10
+nbtMaxSize=209715200
+decoderSize=838860800
