--- a/config/jei/ingredient-list-mod-sort-order.ini
+++ b/config/jei/ingredient-list-mod-sort-order.ini
@@ -82,7 +82,6 @@ Pigsteel Mod
 Rediscovered
 Scorched Guns
 Scorched Guns Brass
-Scaling Health
 Upgrade Aquatic
 A Man With Plushies
 Undead Unleashed!
@@ -138,3 +137,6 @@ Eyes in the Darkness
 Cave Stuff
 Legendary Survival Overhaul
 Lava Monster
+Hamsters
+Gobber 2
+Gobber Delight
