--- a/config/jei/recipe-category-sort-order.ini
+++ b/config/jei/recipe-category-sort-order.ini
@@ -54,3 +54,5 @@ ars_nouveau:glyph_recipe
 ars_nouveau:imbuement
 ars_nouveau:scry_ritual
 legendarysurvivaloverhaul:sewing
+species:cruncher_pellet
+species:goober_goo
