--- a/config/sound_physics_remastered/allowed_sounds.properties
+++ b/config/sound_physics_remastered/allowed_sounds.properties
@@ -2804,6 +2804,11 @@ graveyard\:entity.revenant.step=true
 graveyard\:entity.wraith.ambient=true
 graveyard\:entity.wraith.hurt=true
 graveyard\:item.vial.splash=true
+hamsters\:entity.hamster.ambient=true
+hamsters\:entity.hamster.beg=true
+hamsters\:entity.hamster.death=true
+hamsters\:entity.hamster.hurt=true
+hamsters\:entity.hamster.sleep=true
 hearth_and_home\:block.chimney.crackle=true
 hunters_return\:mob.hunterillager.cheer=true
 hunters_return\:mob.hunterillager.death=true
@@ -6227,6 +6232,13 @@ species\:block.birt_dwelling.collect=true
 species\:block.birt_dwelling.enter=true
 species\:block.birt_dwelling.exit=true
 species\:block.birt_dwelling.work=true
+species\:block.cranktrap.break=true
+species\:block.cranktrap.close=true
+species\:block.cranktrap.fall=true
+species\:block.cranktrap.hit=true
+species\:block.cranktrap.open=true
+species\:block.cranktrap.place=true
+species\:block.cranktrap.step=true
 species\:block.frozen_hair.break=true
 species\:block.frozen_hair.fall=true
 species\:block.frozen_hair.hit=true
@@ -6237,9 +6249,33 @@ species\:block.frozen_meat.fall=true
 species\:block.frozen_meat.hit=true
 species\:block.frozen_meat.place=true
 species\:block.frozen_meat.step=true
+species\:block.hopelight.break=true
+species\:block.hopelight.place=true
+species\:block.note_block.imitate.bewereager=true
+species\:block.note_block.imitate.ghoul=true
+species\:block.note_block.imitate.quake=true
+species\:block.note_block.imitate.wicked=true
+species\:block.note_block.quake_synth=true
 species\:block.petrified_egg.crack=true
 species\:block.petrified_egg.hatch=true
 species\:block.petrified_egg.plop=true
+species\:block.speclight.break=true
+species\:block.speclight.fall=true
+species\:block.speclight.hit=true
+species\:block.speclight.off=true
+species\:block.speclight.on=true
+species\:block.speclight.place=true
+species\:block.speclight.step=true
+species\:block.spectralibur.can_be_pulled1=true
+species\:block.spectralibur.can_be_pulled2=true
+species\:block.spectralibur.can_be_pulled3=true
+species\:block.spectralibur.cant_pull=true
+species\:block.spectralibur.extract=true
+species\:block.spectralibur.go_in=true
+species\:block.spectralibur.go_in_fully=true
+species\:block.spectralibur.pull=true
+species\:block.spectralibur_pedestal.activate=true
+species\:block.spectralibur_pedestal.deactivate=true
 species\:block.springling_egg.crack=true
 species\:block.springling_egg.hatch=true
 species\:block.springling_egg.plop=true
@@ -6247,15 +6283,47 @@ species\:block.wraptor_egg.break=true
 species\:block.wraptor_egg.crack=true
 species\:block.wraptor_egg.hatch=true
 species\:effect.birtd.applied=true
+species\:effect.bloodlust.feed=true
+species\:effect.bloodlust.removed=true
 species\:effect.gut_feeling.applied=true
 species\:effect.gut_feeling.roar=true
 species\:effect.gut_feeling.spawn=true
+species\:entity.bewereager.bite=true
+species\:entity.bewereager.celebrate=true
+species\:entity.bewereager.death=true
+species\:entity.bewereager.howl=true
+species\:entity.bewereager.howl_strength=true
+species\:entity.bewereager.hurt=true
+species\:entity.bewereager.idle=true
+species\:entity.bewereager.jump=true
+species\:entity.bewereager.land=true
+species\:entity.bewereager.shake=true
+species\:entity.bewereager.slash=true
+species\:entity.bewereager.speed=true
+species\:entity.bewereager.split=true
+species\:entity.bewereager.step=true
+species\:entity.bewereager.stun=true
+species\:entity.bewereager.transform=true
+species\:entity.bewereager.transform_start=true
 species\:entity.birt.death=true
 species\:entity.birt.fly=true
 species\:entity.birt.hurt=true
 species\:entity.birt.idle=true
 species\:entity.birt.message=true
+species\:entity.birt.search=true
 species\:entity.birtd=true
+species\:entity.cliff_hanger.attach=true
+species\:entity.cliff_hanger.attack=true
+species\:entity.cliff_hanger.death=true
+species\:entity.cliff_hanger.hurt=true
+species\:entity.cliff_hanger.idle=true
+species\:entity.cliff_hanger.idle_pulling=true
+species\:entity.cliff_hanger.shoot=true
+species\:entity.cliff_hanger.step=true
+species\:entity.coil.adjust=true
+species\:entity.coil.link=true
+species\:entity.coil.place=true
+species\:entity.coil.remove=true
 species\:entity.cruncher.death=true
 species\:entity.cruncher.hurt=true
 species\:entity.cruncher.idle=true
@@ -6268,6 +6336,22 @@ species\:entity.deepfish.death=true
 species\:entity.deepfish.flop=true
 species\:entity.deepfish.hurt=true
 species\:entity.deepfish.idle=true
+species\:entity.deflector_dummy.absorb=true
+species\:entity.deflector_dummy.attack=true
+species\:entity.deflector_dummy.break=true
+species\:entity.deflector_dummy.deflect=true
+species\:entity.deflector_dummy.hurt=true
+species\:entity.deflector_dummy.place=true
+species\:entity.ghoul.aggro=true
+species\:entity.ghoul.angry=true
+species\:entity.ghoul.attack=true
+species\:entity.ghoul.confused=true
+species\:entity.ghoul.death=true
+species\:entity.ghoul.hurt=true
+species\:entity.ghoul.idle=true
+species\:entity.ghoul.infect=true
+species\:entity.ghoul.searching=true
+species\:entity.ghoul.step=true
 species\:entity.goober.death=true
 species\:entity.goober.eat=true
 species\:entity.goober.hurt=true
@@ -6278,6 +6362,15 @@ species\:entity.goober.rear_up=true
 species\:entity.goober.sneeze=true
 species\:entity.goober.step=true
 species\:entity.goober.yawn=true
+species\:entity.hanger.pull=true
+species\:entity.leaf_hanger.attack=true
+species\:entity.leaf_hanger.catch=true
+species\:entity.leaf_hanger.death=true
+species\:entity.leaf_hanger.hurt=true
+species\:entity.leaf_hanger.idle=true
+species\:entity.leaf_hanger.idle_pulling=true
+species\:entity.leaf_hanger.shoot=true
+species\:entity.leaf_hanger.step=true
 species\:entity.limpet.break=true
 species\:entity.limpet.death=true
 species\:entity.limpet.deflect=true
@@ -6292,6 +6385,16 @@ species\:entity.mammutilation.hurt=true
 species\:entity.mammutilation.idle=true
 species\:entity.mammutilation.mammutiful_howl=true
 species\:entity.mammutilation.mammutiful_idle=true
+species\:entity.quake.absorb=true
+species\:entity.quake.attack=true
+species\:entity.quake.charge=true
+species\:entity.quake.death=true
+species\:entity.quake.finishes_unscrewing=true
+species\:entity.quake.hurt=true
+species\:entity.quake.recharge=true
+species\:entity.quake.shield=true
+species\:entity.quake.step=true
+species\:entity.quake.unscrews=true
 species\:entity.roombug.death=true
 species\:entity.roombug.eat=true
 species\:entity.roombug.goofy_aah_step=true
@@ -6299,6 +6402,16 @@ species\:entity.roombug.hurt=true
 species\:entity.roombug.idle=true
 species\:entity.roombug.snoring=true
 species\:entity.roombug.step=true
+species\:entity.spectre.attack=true
+species\:entity.spectre.dash=true
+species\:entity.spectre.death=true
+species\:entity.spectre.fly=true
+species\:entity.spectre.hulking_attack=true
+species\:entity.spectre.hurt=true
+species\:entity.spectre.idle=true
+species\:entity.spectre.jousting_attack=true
+species\:entity.spectre.spawn=true
+species\:entity.spectre.spot=true
 species\:entity.springling.death=true
 species\:entity.springling.eat=true
 species\:entity.springling.extend=true
@@ -6306,6 +6419,15 @@ species\:entity.springling.extend_finish=true
 species\:entity.springling.hurt=true
 species\:entity.springling.idle=true
 species\:entity.springling.step=true
+species\:entity.stackatick.death=true
+species\:entity.stackatick.eat=true
+species\:entity.stackatick.goofy_aah_step=true
+species\:entity.stackatick.hurt=true
+species\:entity.stackatick.idle=true
+species\:entity.stackatick.sit=true
+species\:entity.stackatick.snoring=true
+species\:entity.stackatick.stand_up=true
+species\:entity.stackatick.step=true
 species\:entity.treeper.burn=true
 species\:entity.treeper.death=true
 species\:entity.treeper.hurt=true
@@ -6322,6 +6444,14 @@ species\:entity.trooper.leaves=true
 species\:entity.trooper.plant=true
 species\:entity.trooper.step=true
 species\:entity.trooper.uproot=true
+species\:entity.wicked.death=true
+species\:entity.wicked.haunt=true
+species\:entity.wicked.hurt=true
+species\:entity.wicked.idle=true
+species\:entity.wicked.idle_haunting=true
+species\:entity.wicked.shoot=true
+species\:entity.wicked.spot=true
+species\:entity.wicked.stop_haunting=true
 species\:entity.wraptor.aggro=true
 species\:entity.wraptor.agitated=true
 species\:entity.wraptor.attack=true
@@ -6335,11 +6465,44 @@ species\:entity.wraptor.step=true
 species\:item.birt_egg.hit=true
 species\:item.birt_egg.throw=true
 species\:item.cracked_wraptor_egg.slurp=true
+species\:item.crankbow.load_arrow=true
+species\:item.crankbow.pull=true
+species\:item.crankbow.quick_pull=true
+species\:item.crankbow.remove_arrow=true
+species\:item.crankbow.shoot=true
+species\:item.crankbow.shoot_spare=true
+species\:item.crankbow.speed=true
+species\:item.crankbow.stop=true
+species\:item.harpoon.anchor=true
+species\:item.harpoon.pull=true
+species\:item.harpoon.retrieved=true
+species\:item.harpoon.start_ziplining=true
+species\:item.harpoon.thrown=true
+species\:item.harpoon.ziplining=true
 species\:item.ichor_bottle.applied=true
+species\:item.monster_meal.apply=true
+species\:item.ricoshield.absorb=true
+species\:item.ricoshield.attack=true
+species\:item.smoke_bomb.charge=true
+species\:item.smoke_bomb.use=true
+species\:item.spectralibur.collect_soul=true
+species\:item.spectralibur.release_spectre=true
+species\:item.spectralibur.start_charging=true
+species\:item.spectralibur.use_soul=true
+species\:item.wicked_dope.boost=true
+species\:item.wicked_dope.fail=true
+species\:item.wicked_mask.equip=true
+species\:item.wicked_mask.link=true
+species\:item.wicked_swapper.fail=true
+species\:item.wicked_swapper.teleport=true
+species\:item.wicked_swapper.throw=true
+species\:item.wicked_treat.apply=true
+species\:item.wicked_wax.eat=true
 species\:item.youth_potion.baby=true
 species\:item.youth_potion.stumped=true
 species\:music.disc.dial=true
 species\:music.disc.lapidarian=true
+species\:music.disk.spawner=true
 spelunkers_charm\:catacombc_additional_sounds=true
 spelunkers_charm\:catacombs_ambient_sound=true
 spelunkers_charm\:geyser_charge=true
